--- a/Linear Visualizations.Rmd
+++ b/Linear Visualizations.Rmd
@@ -4,6 +4,7 @@ output: html_document
 date: "2022-08-08"
 ---
 
+Importing the data and necessary modules
 ```{r setup, include=FALSE}
 library(tidyverse)
 library(GGally)
@@ -12,6 +13,7 @@ library(gridExtra)
 house <- read.csv('houses_clean.csv', header=TRUE)
 ```
 
+Removing X Column and Splitting Training and Test Data
 ```{r}
 house <- subset(house, select = -c(X))
 set.seed(6021)
@@ -20,17 +22,19 @@ train<-house[sample, ]
 test<-house[-sample, ]
 ```
 
+Summary Statistics for Training Data
 ```{r}
 summary(train)
 options(scipen=10000)
 ```
 
+Standard Deviation for Training Data
 ```{r}
 apply(train,2,sd)
 ```
 
 
-
+Histogram for Sale Price
 ```{r}
 train %>% 
   ggplot(aes(x=price))+
@@ -40,6 +44,7 @@ train %>%
   ylab('Count')
 ```
 
+Zoomed in Histogram for Sale Price
 ```{r}
 train %>% 
   filter(price <= 4000000) %>% 
@@ -50,13 +55,14 @@ train %>%
   ylab('Count')
 ```
 
+Zoomed in Histogram of Price for houses in Seattle and Outside of Seattle
 ```{r}
 train %>% 
   filter(price <= 3000000) %>% 
   ggplot(aes(x=price))+
   geom_histogram(aes(color=seattle, alpha=0.5))
 ```
-
+Scatterplot of Bedrooms vs Sale Price
 ```{r}
 bedsale <- train %>% 
   ggplot(aes(x=bedrooms, y=price))+
@@ -66,6 +72,7 @@ bedsale <- train %>%
   ylab('Price (in USD)')
 ```
 
+Scatterplot of Bathrooms vs Sale Price
 ```{r}
 bathsale <- train %>%
   ggplot(aes(x=bathrooms, y=price))+
@@ -76,6 +83,7 @@ bathsale <- train %>%
   geom_smooth(method='lm', se=FALSE)
 ```
 
+Scatterplot of Living Space (in square feet) vs Sale Price
 ```{r}
 livingsale <- train %>% 
   ggplot(aes(x=sqft_living, y=price))+
@@ -86,6 +94,7 @@ livingsale <- train %>%
   geom_smooth(method='lm', se=FALSE)
 ```
 
+Scatterplot of Lot Size (in square feet) vs Sale Price
 ```{r}
 lotsale <- train %>%
   ggplot(aes(x=sqft_lot, y=price))+
@@ -96,10 +105,12 @@ lotsale <- train %>%
   geom_smooth(method='lm', se=FALSE)
 ```
 
+Grid of Previous 4 Graphs
 ```{r}
 grid.arrange(bedsale,bathsale,livingsale, lotsale, ncol=2)
 ```
 
+Boxplot of Number of Floors vs Sale Price
 ```{r}
 floorsale <- train %>% 
   ggplot(aes(x=as.factor(floors), y=price))+
@@ -110,6 +121,7 @@ floorsale <- train %>%
 
 ```
 
+Boxplot of Waterfront View vs Sale Price
 ```{r}
 watersale <- train %>% 
   ggplot(aes(x=factor(waterfront, labels=c('No', 'Yes')), y=price))+
@@ -120,6 +132,7 @@ watersale <- train %>%
 
 ```
 
+Boxplot of View Quality vs Sale Price
 ```{r}
 viewsale <- train %>% 
   ggplot(aes(x=as.factor(view), y=price))+
@@ -130,6 +143,7 @@ viewsale <- train %>%
 
 ```
 
+Scatterplot of Year Built vs Sale Price
 ```{r}
 yrsale <- train %>%
   ggplot(aes(x=yr_built, y=price))+
@@ -141,10 +155,11 @@ yrsale <- train %>%
 
 ```
 
+Grid of previous 4 Graphs
 ```{r}
 grid.arrange(floorsale,watersale,viewsale, yrsale, ncol=2)
 ```
-
+Scatterplot of Neighbor's Living Space vs Sale Price
 ```{r}
 living15sale <- train %>%
   ggplot(aes(x=sqft_living15, y=price))+
@@ -156,6 +171,7 @@ living15sale <- train %>%
 
 ```
 
+Scatterplot of Neighbor's Lot Size vs Sale Price
 ```{r}
 lot15sale <- train %>%
   ggplot(aes(x=sqft_lot15, y=price))+
@@ -167,17 +183,7 @@ lot15sale <- train %>%
 
 ```
 
-```{r}
-lot15sale <- train %>%
-  ggplot(aes(x=sqft_lot15, y=price))+
-  geom_point(alpha=0.1)+
-  ggtitle("Neighbors' Lot Size and Sale Price")+
-  xlab("Neighbors' Lot Size (in sq. ft.)")+
-  ylab('Price (in USD)')+
-  geom_smooth(method='lm', se=FALSE)
-
-```
-
+Boxplot of Seattle vs Sale Price
 ```{r}
 seattlesale <- train %>% 
   ggplot(aes(x=factor(seattle, labels=c('No', 'Yes')), y=price))+
@@ -188,6 +194,8 @@ seattlesale <- train %>%
 
 ```
 
+
+Boxplot of Renovated vs Sale Price
 ```{r}
 renovatedsale <- train %>% 
   ggplot(aes(x=factor(renovated, labels=c('No', 'Yes')), y=price))+
@@ -198,20 +206,17 @@ renovatedsale <- train %>%
 
 ```
 
+Grid of Seattle and Renovated Houses Plots
 ```{r}
 grid.arrange(seattlesale,renovatedsale, ncol=2)
 ```
 
+Grid of Neighbor's Property vs Price
 ```{r}
 grid.arrange(living15sale,lot15sale, ncol=2)
 ```
 
-For Logistic: Is our house in Seattle or not?
-
-For Linear: PricexSqFt_Living
-
-Bath x Bed ratio
-
+Correlation Matrix
 ```{r}
 #cor(subset(house, select = c(price_per_sqft, price, sqft_living, yr_built, renovated, view)))
 cormelt <- melt(cor(train))
@@ -223,58 +228,4 @@ ggplot(data = cormelt, aes(x=Var1, y=Var2, fill=value))+
   geom_text(aes(label = round(value, 2)), color = "white", size = 2) +
   guides(fill = guide_colourbar(title = 'Correlation'))+
   coord_fixed()
-```
-
-```{r}
-result <- lm(price~., data=house)
-summary(result)
-```
-
-```{r}
-vif(result)
-```
-
-```{r}
-house %>% 
-  ggplot(aes(x=bedrooms))+
-  geom_histogram(binwidth=1)
-```
-
-```{r}
-house %>% 
-  ggplot(aes(x=sqft_living, y=price))+
-  geom_point(alpha=0.1)+
-  geom_smooth(method='lm', se=FALSE)
-```
-
-```{r}
-house %>% 
-  ggplot(aes(x=sqft_living15, y=price))+
-  geom_point(alpha=0.1)+
-  geom_smooth(method='lm', se=FALSE)
-```
-
-```{r}
-house %>% 
-  ggplot(aes(x=bedrooms, y=price))+
-  geom_point(alpha=0.1)+
-  geom_smooth(method='lm', se=FALSE)
-```
-
-```{r}
-house %>% 
-  ggplot(aes(x=bathrooms, y=price))+
-  geom_point(alpha=0.1)+
-  geom_smooth(method='lm', se=FALSE)
-```
-
-```{r}
-house %>%
-  ggplot(aes(x=basement, y=price, color=grade))+
-  geom_point(alpha=0.1)+
-  geom_smooth(method='lm', se=FALSE)
-```
-
-```{r}
-ggpairs(subset(house, select = -c(waterfront, grade, condition, view, yr_built, sqft_living15, sqft_lot15, renovated, basement)), width=200, height=200)
 ```
